finished up prelim sparql post

--- a/_drafts/sparql-from-python.ipynb
+++ b/_drafts/sparql-from-python.ipynb
@@ -10,15 +10,17 @@
     "\n",
     "## First, what is SPARQL?\n",
     "\n",
-    "SPARQL (\"SPARQL Protocol And RDF Query Language\") is a W3C standard for querying [RDF](https://rebeccabilbro.github.io/rdf-basics/), which allows us to express queries as three-part statements (e.g. texts that are reviews of a particular product):\n",
+    "SPARQL (\"SPARQL Protocol And RDF Query Language\") is a W3C standard for querying [RDF](https://rebeccabilbro.github.io/rdf-basics/) and can be used to express queries across diverse data sources, whether the data is stored natively as RDF or viewed as RDF via middleware. SPARQL contains capabilities for querying required and optional graph patterns along with their conjunctions and disjunctions. SPARQL also supports extensible value testing and constraining queries by source RDF graph. The results of SPARQL queries can be results sets or RDF graphs.\n",
+    "\n",
+    "SPARQL allows us to express queries as three-part statements:\n",
     "\n",
     "    \"\"\"\n",
-    "    PREFIX ...\n",
-    "    SELECT ...\n",
-    "    WHERE  ...\n",
+    "    PREFIX ... // identifies & nicknames namespace URIs of desired variables \n",
+    "    SELECT ... // lists variables to be returned (start with a ?)\n",
+    "    WHERE  ... // contains restrictions on variables expressed as triples\n",
     "    \"\"\"\n",
+    "    \n",
     "\n",
-    "SPARQL can be used to express queries across diverse data sources, whether the data is stored natively as RDF or viewed as RDF via middleware. SPARQL contains capabilities for querying required and optional graph patterns along with their conjunctions and disjunctions. SPARQL also supports extensible value testing and constraining queries by source RDF graph. The results of SPARQL queries can be results sets or RDF graphs.\n",
     "\n",
     "## `SPARQLWrapper`\n",
     "\n",
@@ -57,7 +59,9 @@
     "sparql.setReturnFormat(JSON)\n",
     "result = sparql.query().convert()\n",
     "\n",
+    "# The return data contains \"bindings\" (a list of dictionaries)\n",
     "for hit in result[\"results\"][\"bindings\"]:\n",
+    "    # We want the \"value\" attribute of the \"comment\" field\n",
     "    print(hit[\"comment\"][\"value\"])"
    ]
   },
@@ -65,16 +69,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also use the Wikidata Query Service (WDQS) endpoint to query [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page)."
+    "## Querying Wikidata\n",
+    "\n",
+    "We can also use the Wikidata Query Service (WDQS) endpoint to query [Wikidata](https://www.wikidata.org/wiki/Wikidata:Main_Page).\n",
+    "\n",
+    "Let's say we want to continue our research into spicy things by searching for information about hot sauces in Wikidata. The first step is to find the unique identifier that Wikidata uses to reference \"hot sauce\", which we can do by searching on Wikidata. It turns out to be \"Q522171\", which is an \"`entity`\", which corresponds to the \"`wd`\" prefix in Wikidata. \n",
+    "\n",
+    "If we want to get back results for all of the kinds of hot sauces cataloged in Wikidata, we want to query for the results that have the direct property -- or \"`wdt`\" in Wikidata prefix speak -- \"`<subclasses of>`\", which is encoded as \"P279\" in Wikidata. \n",
+    "\n",
+    "_NOTE: For simple WDQS triples, items should be prefixed with `wd:`, and properties with `wdt:`. We don't need to explicitly alias any prefixes in this case because WDQS already knows many shortcut abbreviations commonly used externally (e.g. rdf, skos, owl, schema, etc.) as well as ones internal to Wikidata, such as:_\n",
+    "\n",
+    "    PREFIX wd: <http://www.wikidata.org/entity/>\n",
+    "    PREFIX wds: <http://www.wikidata.org/entity/statement/>\n",
+    "    PREFIX wdv: <http://www.wikidata.org/value/>\n",
+    "    PREFIX wdt: <http://www.wikidata.org/prop/direct/>\n",
+    "    PREFIX wikibase: <http://wikiba.se/ontology#>\n",
+    "    PREFIX p: <http://www.wikidata.org/prop/>\n",
+    "    PREFIX ps: <http://www.wikidata.org/prop/statement/>\n",
+    "    PREFIX pq: <http://www.wikidata.org/prop/qualifier/>\n",
+    "    PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
+    "    PREFIX bd: <http://www.bigdata.com/rdf#>\n",
+    "\n",
+    "More on prefixes [here](https://en.wikibooks.org/wiki/SPARQL/Prefixes)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "sparql = SPARQLWrapper(\"https://query.wikidata.org/sparql\")\n",
+    "\n",
+    "# Below we SELECT both the hot sauce items & their labels\n",
+    "# in the WHERE clause we specify that we want labels as well as items\n",
     "sparql.setQuery(\"\"\"\n",
     "SELECT ?item ?itemLabel \n",
     "\n",
@@ -91,12 +119,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, we can use `pandas` to review the results as a dataframe."
+    "Let's use `pandas` to review the results as a dataframe:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +269,7 @@
        "17  http://www.wikidata.org/entity/Q16642516                   Q16642516"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,43 +285,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cool site for finding [live SPARQL endpoints](http://sparqles.ai.wu.ac.at/availability)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a local RDF file? \n",
-    "# Put in a local triple store and point your code to localhost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use `rdflib` to query the rdflib.graph.Graph()\n",
+    "### More on SPARQL & SPARQL Endpoints\n",
     "\n",
-    "filename = \"path/to/fileneme\" #replace with something interesting\n",
-    "uri = \"uri_of_interest\" #replace with something interesting\n",
-    "\n",
-    "import rdflib\n",
-    "import rdfextras\n",
-    "rdfextras.registerplugins() # so we can Graph.query()\n",
-    "\n",
-    "g=rdflib.Graph()\n",
-    "g.parse(filename)\n",
-    "results = g.query(\"\"\"\n",
-    "SELECT ?p ?o\n",
-    "WHERE {\n",
-    "<%s> ?p ?o.\n",
-    "}\n",
-    "ORDER BY (?p)\n",
-    "\"\"\" % uri) #get every predicate and object about the uri\n"
+    " - [Learning SPARQL, 2nd Edition, by Bob DuCharme](https://www.amazon.com/Learning-SPARQL-Querying-Updating-1-1/dp/1449371434).\n",
+    " - Querying Wikidata with SPARQL [tutorial](https://www.wikidata.org/wiki/Wikidata:SPARQL_tutorial).\n",
+    " - [Video tutorial](https://youtu.be/1jHoUkj_mKw) on using Wikidata Query Service.\n",
+    " - Test out Wikidata SPARQL queries [here](https://query.wikidata.org/).\n",
+    " - Using DBPedia with SPARQL [video](https://youtu.be/BmHKb0kLGtA).\n",
+    " - Cool site for finding [live SPARQL endpoints](http://sparqles.ai.wu.ac.at/availability)."
    ]
   }
  ],
