--- a/_posts/2018-08-19-doctor-go.md
+++ b/_posts/2018-08-19-doctor-go.md
@@ -10,11 +10,13 @@ Recently I was talking to a friend who works in the distributed computing space.
 
 My friend had a few requests;
 
- (1) information about the operating system running on the virtual machine,
- (2) details about the virtual memory (RAM) on that machine so that he knows how much has been used and how much is available,
- (3) disk usage information
- (4) CPU details (e.g. number of cores)
- (5) Go version
+ 1. information about the operating system running on the virtual machine,
+ 2. details about the virtual memory (RAM) on that machine so that he knows how much has been used and how much is available,
+ 3. disk usage information
+ 4. CPU details (e.g. number of cores)
+ 5. Go version
+
+
 
 ## Preliminary Implementation
 
@@ -22,17 +24,21 @@ Here's a very rough preliminary implementation, which leverages the [`gopsutil` 
 
 <script src="https://gist.github.com/rebeccabilbro/2c3b2811e78aef880998ba38aad01f86.js"></script>
 
+
+
 ## Next Steps
 
 While the reporting functionalities were useful to me (since I'm still learning about systems stuff), ideally, `doctor` should be converted into a package that exposes a struct called something like `Status`, which included all of the above details, as well as a method (e.g. `getMachineStatus`) that returns a `Status` struct with all the fields populated.
+
+
 
 ## Resources
 
 Here are some of the very helpful resources and readings I looked at during the experimentation:
 
-- [`gopsutil`](https://github.com/shirou/gopsutil)
-- [`gosigar`](https://github.com/cloudfoundry/gosigar/)
-- [`go-ps`](https://github.com/mitchellh/go-ps)
-- [`psutil`](https://github.com/giampaolo/psutil)
-- [df(Unix)](https://en.wikipedia.org/wiki/Df_(Unix))
-- [ps(Unix)](https://en.wikipedia.org/wiki/Ps_(Unix))
+ - [`gopsutil`](https://github.com/shirou/gopsutil)
+ - [`gosigar`](https://github.com/cloudfoundry/gosigar/)
+ - [`go-ps`](https://github.com/mitchellh/go-ps)
+ - [`psutil`](https://github.com/giampaolo/psutil)
+ - [df(Unix)](https://en.wikipedia.org/wiki/Df_(Unix))
+ - [ps(Unix)](https://en.wikipedia.org/wiki/Ps_(Unix))
