adds my solution for challenge

--- a/_posts/2018-08-27-cmsc-818e-day-1.md
+++ b/_posts/2018-08-27-cmsc-818e-day-1.md
@@ -154,24 +154,37 @@ Practice with control flow: Fill out the definition of the square root iterative
 implement a `for` loop:
 
 ```
+// Modify the code below to compute a square root w/ the iterative approach
+// outlined. You may use "math.Abs()", but not any other math method.
+// Modify sqrt to return both a number of iterations, and the final value,
+// modify main to print them out.
 package main
 
 import (
 	"fmt"
+	"math"
 )
 
-func Sqrt(x float64) float64 {
-	z := 1.0
-	for i := 1; i < 10; i++ {
-		z -= (z*z - x) / (2 * z)
-		fmt.Printf("z = %v\n", z)
+func Sqrt(x float64) (float64, int) {
+	var z, diff, iter = 1.0, 1.0, 0
+	for i := 1; i < 20; i++ {
+		diff = (z*z - x) / (2 * z)
+		switch {
+		case math.Abs(diff) < 0.01:
+			break
+		default:
+			z -= diff
+			iter++
+		}
+
 	}
-	return z
+	return z, iter
 
 }
 
 func main() {
-	fmt.Println(Sqrt(2))
+	z, iter := Sqrt(50)
+	fmt.Printf("After %v iterations, z = %v\n", iter, z)
 }
 
 ```
