adds cap theorem

--- a/_posts/2018-08-27-cmsc-818e-day-1.md
+++ b/_posts/2018-08-27-cmsc-818e-day-1.md
@@ -147,6 +147,12 @@ Use Piazza to talk about projects; for Go troubleshooting.
  - no default args
  - everything is a package
 
+## The CAP Theorem
+The [CAP theorem](https://en.wikipedia.org/wiki/CAP_theorem) states that it is impossible for a distributed data store to simultaneously provide more than two out of the following three guarantees:
+
+ - *Consistency*: Every read receives the most recent write or an error
+ - *Availability*: Every request receives a (non-error) response – without guarantee that it contains the most recent write
+ - *Partition tolerance*: The system continues to operate despite an arbitrary number of messages being dropped (or delayed) by the network between nodes
 
 ## Exercise: Loops and Functions
 
