--- a/_posts/2018-09-05-cmsc-818e-day-3.md
+++ b/_posts/2018-09-05-cmsc-818e-day-3.md
@@ -2,6 +2,7 @@
 layout: post
 title:  CMSC 818e Day 3
 date:   2018-09-05 14:02
+categories: class_notes
 ---
 
 These are notes taken during CMSC 818e: Distributed And Cloud-Based Storage Systems. Course webpage and syllabus [here](http://triffid.cs.umd.edu/818/).
