--- a/_posts/2018-08-29-cmsc-818e-day-2.md
+++ b/_posts/2018-08-29-cmsc-818e-day-2.md
@@ -2,6 +2,7 @@
 layout: post
 title:  CMSC 818e Day 2
 date:   2018-08-29 20:34
+categories: class_notes
 ---
 
 These are notes taken during CMSC 818e: Distributed And Cloud-Based Storage Systems. Course webpage and syllabus [here](http://triffid.cs.umd.edu/818/).
@@ -34,5 +35,5 @@ These are notes taken during CMSC 818e: Distributed And Cloud-Based Storage Syst
  - [gitlab link](https://gitlab.cs.umd.edu/keleher/818fall18/tree/master/p1)
  - Use Fuse - an interface for building user-level file systems.
  - modify `dfs.go` per README; don't have to implement all of the functions at once. Start with 'hello' and slowly add in others
- - `bazil` can have a file system that doesn't crash with a very small subset of the methods defined. 
+ - `bazil` can have a file system that doesn't crash with a very small subset of the methods defined.
  - use Piazza to communicate with class & Pete
