adds tags to posts for enhanced searchability

--- a/_posts/2018-08-27-cmsc-818e-day-1.md
+++ b/_posts/2018-08-27-cmsc-818e-day-1.md
@@ -2,7 +2,7 @@
 layout: post
 title:  CMSC 818e Day 1
 date:   2018-08-27 13:59
-categories: class_notes
+tags:   class_notes
 ---
 
 These are notes taken during CMSC 818e: Distributed And Cloud-Based Storage Systems. Course webpage and syllabus [here](http://triffid.cs.umd.edu/818/).
