--- a/_posts/2018-09-09-knockoff.md
+++ b/_posts/2018-09-09-knockoff.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  Optimizing cloud storage (but sacrificing privacy?)
+tags:   class_readings
 date:   2018-09-09 16:51
 ---
 
