--- a/_posts/2018-08-29-cmsc-818e-day-2.md
+++ b/_posts/2018-08-29-cmsc-818e-day-2.md
@@ -2,7 +2,7 @@
 layout: post
 title:  CMSC 818e Day 2
 date:   2018-08-29 20:34
-categories: class_notes
+tags:   class_notes
 ---
 
 These are notes taken during CMSC 818e: Distributed And Cloud-Based Storage Systems. Course webpage and syllabus [here](http://triffid.cs.umd.edu/818/).
