--- a/_posts/2018-09-10-cmsc-818e-day-4.md
+++ b/_posts/2018-09-10-cmsc-818e-day-4.md
@@ -2,7 +2,7 @@
 layout: post
 title:  CMSC 818e Day 4
 date:   2018-09-10 13:51
-categories: class_notes
+tags:   class_notes
 ---
 
 These are notes taken during CMSC 818e: Distributed And Cloud-Based Storage Systems. Course webpage and syllabus [here](http://triffid.cs.umd.edu/818/).
