update old posts to have header image

--- a/_posts/2018-08-19-doctor-go.md
+++ b/_posts/2018-08-19-doctor-go.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  A System Health Check in Go
+image:
+  feature: pepper_crop.png
 tags:   programming
 date:   2018-08-19 17:52
 ---
