--- a/_posts/2018-09-09-knockoff.md
+++ b/_posts/2018-09-09-knockoff.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  Optimizing cloud storage (but sacrificing privacy?)
+image:
+  feature: pepper_crop.png
 tags:   class_readings
 date:   2018-09-09 16:51
 ---
